// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostContent - Snapshots > matches snapshot with empty content 1`] = `
<div>
  <p
    class="text-base font-medium text-secondary-foreground whitespace-pre-wrap"
  />
</div>
`;

exports[`PostContent - Snapshots > matches snapshot with multiline content (preserves newlines) 1`] = `
<div>
  <p
    class="text-base font-medium text-secondary-foreground whitespace-pre-wrap"
  >
    Line 1
Line 2

Line 3
  </p>
</div>
`;

exports[`PostContent - Snapshots > matches snapshot with single-line content 1`] = `
<div>
  <p
    class="text-base font-medium text-secondary-foreground whitespace-pre-wrap"
  >
    One liner
  </p>
</div>
`;
